Persist user entity using JPA repository